# satkit

./: .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  MANIFEST.in  Pipfile  README.md  build.rs  mkdocs.yml  pyproject.toml  release.toml  test.ipynb
.github/workflows/: build.yml  cargo-publish.yml  docs.yml  release.yml  wheels.yml
benches/: hotpaths.rs
docs/: CNAME  index.md  requirements.txt  satkit.mplstyle
docs/api/: consts.md  density.md  frame.md  frametransform.md  gravity.md  index.md  itrfcoord.md  jplephem.md  kepler.md  lambert.md  moon.md  planets.md  quaternion.md  satprop.md  satstate.md  sun.md  time.md  tle.md  utils.md
docs/examples/: gen_plots.py
docs/getting-started/: datafiles.md  installation.md
docs/guide/: density.md  forces.md  frametransform.md  integrators.md  itrfcoord.md  lambert.md  maneuver_frames.md  quaternion.md  references.md  satprop.md  satstate.md  time.md  tle.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/tutorials/: Atmospheric Density.ipynb  Coordinate Frame Transforms.ipynb  Coordinate Frames.ipynb  Covariance Propagation.ipynb  Eclipse.ipynb  GPS Example.ipynb  Geodetic Coordinates.ipynb  High Precision Propagation.ipynb  ITRF Coordinates.ipynb  Keplerian Elements.ipynb  Lambert Targeting.ipynb  Optical Observations of Satellites.ipynb  Orbit Maneuvers.ipynb  Orbital Mean-Element Message.ipynb  Planetary Ephemerides.ipynb  Plots.ipynb  Quaternions.ipynb  SGP4 vs Numerical Propagation.ipynb  Satellite Ground Contacts.ipynb  TLE Fitting.ipynb  Time Systems.ipynb  Two-Line Element Set.ipynb  index.md  riseset.ipynb
python/: Cargo.toml  Pipfile  build.rs  requirements.txt
python/docs/: Pipfile  requirements.txt
python/docs/source/: TLE.md  conf.py  datafiles.md  density.md  frametransform.md  index.md  install.md  itrfcoord.md  quaternion.md  references.md  satprop.md  satstate.md  time.md
python/docs/source/_static/: theme_mods.css
python/docs/source/api/: consts.md  density.md  earthgravity.md  frametransform.md  itrfcoord.md  jplephem.md  kepler.md  orbital_mean_elements.md  quaternion.md  satprop.md  satstate.md  time.md  tle.md  utils.md
python/docs/source/examples/: Eclipse.ipynb  High Precision Propagation.ipynb  ITRF Coordinates.ipynb  Optical Observations of Satellites.ipynb  Orbital Mean-Element Message.ipynb  Plots.ipynb  Satellite Ground Contacts.ipynb  Sunrise Sunset.ipynb  TLE Fitting.ipynb  Two-Line Element Set.ipynb  riseset.ipynb
python/satkit/: __init__.py  __init__.pyi  _version.py  density.pyi  frametransform.pyi  jplephem.pyi  moon.pyi  planets.pyi  satkit.pyi  satprop.pyi  sun.pyi  utils.pyi
python/satkit/density/: __init__.pyi
python/satkit/frametransform/: __init__.pyi
python/satkit/jplephem/: __init__.pyi
python/satkit/moon/: __init__.py
python/satkit/satprop/: __init__.pyi
python/satkit/sun/: __init__.pyi
python/satkit/utils/: __init__.pyi
python/src/: lib.rs  mod_utils.rs  pyconsts.rs  pydensity.rs  pyduration.rs  pyframes.rs  pyframetransform.rs  pygravity.rs  pyinstant.rs  pyitrfcoord.rs  pyjplephem.rs  pykepler.rs  pylambert.rs  pylpephem_moon.rs  pylpephem_planets.rs  pylpephem_sun.rs  pynrlmsise.rs  pyomm.rs  pypropagate.rs  pypropresult.rs  pypropsettings.rs  pyquaternion.rs  pysatproperties.rs  pysatstate.rs  pysgp4.rs  pysolarsystem.rs  pythrust.rs  pytle.rs  pytlefitstatus.rs  pyukf.rs  pyutils.rs
python/test/: conftest.py  download_data.py  download_from_json.py  download_testvecs.py  orbitprop_gps_fit.py  sp3file.py  test.py  test_coordinates.py  test_ephemeris.py  test_frames.py  test_propagation.py  test_sgp4.py  test_time.py
recipes/conda/: README.md
recipes/conda/satkit/: meta.yaml
src/: astrotime.rs  consts.rs  duration.rs  earth_orientation_params.rs  earthgravity.rs  error.rs  frames.rs  itrfcoord.rs  jplephem.rs  kepler.rs  lambert.rs  lib.rs  mathtypes.rs  nrlmsis2.rs  nrlmsise.rs  solar_cycle_forecast.rs  solarsystem.rs  spaceweather.rs  tle.rs  types.rs
src/filters/: mod.rs  ukf.rs
src/frametransform/: dispatch.rs  error.rs  ierstable.rs  mod.rs  qcirs2gcrs.rs
src/lpephem/: mod.rs  moon.rs  planets.rs  sun.rs
src/ode/: harmonic_oscillator.rs  mod.rs  nalgebra.rs  nalgebra_bindings.rs  ode_tests.rs  rk_adaptive.rs  rk_adaptive_settings.rs  rk_explicit.rs  rkf45.rs  rkts54.rs  rkv65.rs  rkv65_table.rs  rkv87.rs  rkv87_table.rs  rkv98.rs  rkv98_nointerp.rs  rkv98_nointerp_table.rs  rkv98_table.rs  rodas4.rs  rosenbrock.rs  types.rs
src/ode/adaptive_solvers/: mod.rs  rkf45.rs  rkts54.rs  rkv65.rs  rkv87.rs  rkv87_table.rs  rkv98.rs  rkv98_efficient.rs  rkv98_efficient_table.rs  rkv98_nointerp.rs  rkv98_nointerp_table.rs
src/omm/: error.rs  mod.rs  xml.rs
src/orbitprop/: drag.rs  error.rs  mod.rs  point_gravity.rs  precomputed.rs  propagator.rs  relativity.rs  satproperties.rs  satstate.rs  settings.rs  thrust.rs  tides.rs
src/orbitprop/ode/: mod.rs  (+1 more)
src/pybindings/: mod.rs  mod_utils.rs  pyastrotime.rs  pyconsts.rs  pydensity.rs  pyduration.rs  pyframes.rs  pyframetransform.rs  pygravity.rs  pyinstant.rs  pyitrfcoord.rs  pyjplephem.rs  pykepler.rs  pylpephem_moon.rs  pylpephem_planets.rs  pylpephem_sun.rs  pympsuccess.rs  pynrlmsise.rs  pypropagate.rs  pypropresult.rs  pypropsettings.rs  pyquaternion.rs  pysatproperties.rs  pysatstate.rs  pysgp4.rs  pysolarsystem.rs  pytle.rs  pyukf.rs  pyutils.rs
src/sgp4/: dpper.rs  dscom.rs  dsinit.rs  dspace.rs  error.rs  getgravconst.rs  initl.rs  mod.rs  satrec.rs  sgp4.rs  sgp4_impl.rs  sgp4_lowlevel.rs  sgp4init.rs
src/time/: chrono.rs  duration.rs  instant.rs  instant_err.rs  instant_ops.rs  instantparse.rs  mod.rs  tests.rs  timelike.rs  timescale.rs  weekday.rs
src/tle/: error.rs  fitting.rs  mod.rs
src/utils/: datadir.rs  download.rs  mod.rs  pypackage.rs  skerror.rs  test.rs  update_data.rs
tests/: earth_orientation_params_init.rs  earthgravity_init.rs  ierstable_init.rs  jplephem_de421_testpo.rs  jplephem_init.rs  solar_cycle_forecast_init.rs  spaceweather_init.rs
