[package]
name = "satkit"
version = "0.6.1"
edition = "2021"
description = "Satellite Toolkit"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/ssmichael1/satkit"
repository = "https://github.com/ssmichael1/satkit"
documentation = "https://docs.rs/satkit"
keywords = ["satellite", "orbit", "ephemeris", "tle", "astrodynamics"]
categories = ["aerospace", "algorithms", "mathematics", "science"]


# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "satkit"


[dependencies]
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
ndarray = "0.16.1"
libc = "0.2"
chrono = "0.4"
cty = "0.2.2"
num-traits = "0.2.19"
thiserror = "2.0"
simba = "0.9"
once_cell = "1.21"
numpy = { version = "0.25", optional = true }
pyo3 = { version = "0.25.1", features = [
    "extension-module",
    "anyhow",
], optional = true }
ureq = "3"
json = "0.12.4"
process_path = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde-pickle = "1.2.0"
itertools = "0.14.0"
anyhow = "1"

[build-dependencies]
cc = { version = "1.2", features = ["parallel"] }
chrono = "0.4.38"
pyo3-build-config = { version = "0.25.1", optional = true }

[dev-dependencies]
rand = "0.9"
approx = "0.5"
rand_distr = "0.5"

[features]
pybindings = ["pyo3", "numpy", "pyo3-build-config"]

[profile.test]
opt-level = 3
