[workspace]
members = [".", "python"]

[package]
name = "satkit"
version = "0.18.0"
edition = "2021"
description = "Satellite Toolkit"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://satkit.dev"
repository = "https://github.com/ssmichael1/satkit"
documentation = "https://satkit.dev"
keywords = ["satellite", "orbit", "ephemeris", "tle", "astrodynamics"]
categories = ["aerospace", "algorithms", "mathematics", "science"]


# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "satkit"


[dependencies]
numeris = { version = "0.5.7", features = ["serde", "estimate", "ode"] }
thiserror = "2.0"
ureq = { version = "3.1.2", optional = true }
process_path = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = ["serialize"], optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
anyhow = "1"
rand = "0.9.2"
approx = "0.5"
rand_distr = "0.5.1"

[features]
default = ["omm-xml", "download"]
omm-xml = ["dep:quick-xml"]
chrono = ["dep:chrono"]
download = ["dep:ureq"]

[workspace.metadata.release]
pre-release-replacements = [
  { file = "pyproject.toml", search = 'version = "[^"]*"', replace = 'version = "{{version}}"', exactly = 1 },
]

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
