[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "satkit"
dependencies = ["numpy>=1.0.0", "satkit-data>=0.7.0"]
requires-python = ">= 3.10"
authors = [{ name = "Steven Michael", email = "ssmichael@gmail.com" }]
maintainers = [{ name = "Steven Michael", email = "ssmichael@gmail.com" }]
readme = "README.md"
version = "0.10.3"
license = "MIT"
description = "Satellite Orbital Dynamics Toolkit"
keywords = [
    "satellite",
    "orbit",
    "astrodynamics",
    "SGP4",
    "TLE",
    "JPL",
    "Ephemeris",
]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
[project.optional-dependencies]
test = ["pytest", "xmltodict"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["python"]
include = ["satkit*"]
exclude = ["test*", "docs*", "examples*", "src*"]

[tool.cibuildwheel]
build = [
    "cp314-*",
    "cp313-*",
    "cp312-*",
    "cp311-*",
    "cp310-*",
]
skip = ["pp*", "*_i686", "*_s390x", "*_ppc64le", "*-musllinux*"]
test-skip = "*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-build = [
    "pip install -U setuptools-rust",
    "rustup default stable",
    "rustup target add aarch64-apple-darwin",
    "rustup target add x86_64-apple-darwin",
    "rustup show",
]
environment = { PATH = "$PATH:$HOME/.cargo/bin", MACOSX_DEPLOYMENT_TARGET = "10.12" }

[tool.cibuildwheel.linux]
archs = ["native"]
environment = { PATH = "$PATH:$HOME/.cargo/bin" }
before-build = [
    "pip install -U setuptools-rust",
    "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=stable --profile=minimal -y",
    "rustup show",
]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
environment = { PATH = '$UserProfile\.cargo\bin;$PATH' }
before-build = [
    "pip install -U setuptools-rust",
    "rustup toolchain install stable-x86_64-pc-windows-msvc",
    "rustup default stable-x86_64-pc-windows-msvc",
    "rustup override set stable-x86_64-pc-windows-msvc",
    "rustup show",
]

[[tool.setuptools-rust.ext-modules]]
target = "satkit/satkit"
path = "python/Cargo.toml"
binding = "PyO3"
debug = false
