[package]
name = "satkit-python"
version = "0.10.2"
edition = "2021"
publish = false

[lib]
name = "satkit"
crate-type = ["cdylib"]

[dependencies]
satkit = { path = ".." }
pyo3 = { version = "0.28.2", features = ["extension-module", "anyhow"] }
numpy = "0.28"
nalgebra = "0.34.0"
ndarray = "0.17.1"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde-pickle = "1.2.0"
rmpfit = "0.3.0"
process_path = "0.1.4"

[build-dependencies]
pyo3-build-config = "0.28.2"
