[package]
name = "satkit-python"
version = "0.16.1"
edition = "2021"
publish = false

[lib]
name = "satkit"
crate-type = ["cdylib"]

[dependencies]
satkit = { path = ".." }
pyo3 = { version = "0.28.2", features = ["extension-module", "anyhow"] }
numpy = "0.28"
numeris = { version = "0.5.6", features = ["serde", "estimate"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde-pickle = "1.2.0"
process_path = "0.1.4"

[build-dependencies]
pyo3-build-config = "0.28.2"
